--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
     <header class="menu-bar">
       <div class="container">
         <div class="row">
-          <div class="col-xl-2">
+          <div class="col-xl-2 align-self-center">
             <img src="img/logo.png" alt="Belaz" class="logo">
           </div>
           <div class="col-xl-2 ml-auto align-self-center">
@@ -37,14 +37,75 @@
             </ul>
           </div>
           <div class="col-xl-2">
-                <a href="#" id="order-call-button">ЗАКАЗАТЬ ЗВОНОК</a>
+                <span><a href="#" id="order-call-button">ЗАКАЗАТЬ ЗВОНОК</a></span>
             </div>
           </div>
         </div>
       </div>
     </header>
+    <header class="header">
+      <div class="container">
+            <div class="header__title">ОРИГИНАЛЬНЫЕ ЗАПЧАСТИ <br />ДЛЯ БЕЛАЗ</div>
+            <div class="header__subtitle">с бесплатной доставкой<br />в Ваш город!</div>
+            <div class="container list">
+              <div class="row header_row">
+                  <div class="col-xl-2"><img src="img/piggy_bank.png" alt="piggy bank"></div>
+                  <div class="col-xl-10"> Дилерские цены - ниже на 20%, работаем без посредников!</div>
+              </div>
+                <div class="row header_row">
+                  <div class="col-xl-2"><img src="img/truck.png" alt="truck"></div> 
+                  <div class="col-xl-10">Срочная бесплатная доставка за 7 дней</div>
+                </div>
+                <div class="row header_row">
+                  <div class="col-xl-2"><img src="img/calendar.png" alt="calendar"></div>
+                  <div class="col-xl-10">Даем рассрочку<br />36 месяцев</div>
+                </div>
+                <div class="row header_row">
+                  <div class="col-xl-2"><img src="img/medal.png" alt="medal"></div>
+                  <div class="col-xl-10">Даем гарантию<br />от 12 месяцев</div>
+                </div>
+              </div>
+      </div>
+    </header>
+    <!--нижняя часть хедера-->
+    <section class="get__info">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2>
+              Получите прайс прямо сейчас<br/>на электронную почту!
+            </h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-6">
+            <form>
+              <input type="text" placeholder="ВВЕДИТЕ ВАШ E-MAIL" class="input-form" id="your_email">
+            </form>
+          </div>
+          <div class="col-xl-6">
+            <form>
+              <input type="text" placeholder="ВВЕДИТЕ ВАШ ТЕЛЕФОН" class="input-form" id="your_phone">
+            </form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-6" id="price__time">
+            <span>Прайс придет к Вам на почту<br />в течение 5 минут!</span><img src="img/clock.png" alt="clock">
+          </div>
+          <div class="col-xl-6">
+            <span>
+              <a href="" id="get__price">
+                  ПОЛУЧИТЬ ПРАЙС
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
   </body>
 </html>
