--- a/index.html
+++ b/index.html
@@ -190,10 +190,63 @@
             <h2>Мы гарантируем сохранность деталей<br />во время перевозки!</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row guarantees-img">
           <div class="col-xl-4">
-            <img src="img/2_image3_1.png" alt="">
+            <img src="img/2_image3.png">
           </div>
+          <div class="col-xl-4">
+            <img src="img/2_image2.png">
+          </div>
+          <div class="col-xl-4">
+            <img src="img/2_image1.png">
+          </div>
+        </div>
+        <div class="row guarantees-subtitles">
+          <div class="col-xl-4">
+            <h4>Гарантия на целостность поставки<br />прописана в договоре</h4>
+          </div>
+          <div class="col-xl-4">
+            <h4>Каждая запчасть доставляется с завода<br/>в жесткой упаковке</h4>
+          </div>
+          <div class="col-xl-4">
+            <h4>Дополнительный контроль качества<br />нашими специалистами</h4>
+          </div>
+        </div>
+        <div class="row guarantees-more">
+          <div class="col-xl-4">
+            <a href="#">ПОДРОБНЕЕ</a>
+          </div>
+          <div class="col-xl-4">
+            <a href="#">ПОДРОБНЕЕ</a>
+          </div>
+          <div class="col-xl-4">
+            <a href="#">ПОДРОБНЕЕ</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="bonus">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 id="bonus-title">У нас разработаны бонусные системы<br />и скидки для наших клиентов</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-3 bonus_item">10%</div>
+          <div class="col-xl-3 bonus_item">20%</div>
+          <div class="col-xl-3 bonus_item">
+            <img src="img/4_delivery_truck.png">
+          </div>
+          <div class="col-xl-3 bonus_item">
+            <img src="img/telemarketer.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-3">Дополнительная скидка 10%<br />на вторую запчасть<br />и любые последующие</div>
+          <div class="col-xl-3">Скидка 20% при заключении<br />договора на годовое<br />сервисное обслуживание</div>
+          <div class="col-xl-3">Бесплатная доставка<br />по всей России<br />для всех клиентов</div>
+          <div class="col-xl-3">Бесплатная круглосуточная<br />техническая поддержка</div>
         </div>
       </div>
     </section>
