--- a/index.html
+++ b/index.html
@@ -233,20 +233,147 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-3 bonus_item">10%</div>
-          <div class="col-xl-3 bonus_item">20%</div>
-          <div class="col-xl-3 bonus_item">
-            <img src="img/4_delivery_truck.png">
+          <div class="col-xl-3">
+            <span class="bonus_item">10%</span>
           </div>
-          <div class="col-xl-3 bonus_item">
-            <img src="img/telemarketer.png">
+          <div class="col-xl-3">
+            <span class="bonus_item">20%</span>
+          </div>
+          <div class="col-xl-3">
+            <span class="bonus_item"><img src="img/4_delivery_truck.png"></span>
+          </div>
+          <div class="col-xl-3">
+            <span class="bonus_item"><img src="img/telemarketer.png"></span>
           </div>
         </div>
-        <div class="row">
+        <div class="row bonus_bottom">
           <div class="col-xl-3">Дополнительная скидка 10%<br />на вторую запчасть<br />и любые последующие</div>
           <div class="col-xl-3">Скидка 20% при заключении<br />договора на годовое<br />сервисное обслуживание</div>
           <div class="col-xl-3">Бесплатная доставка<br />по всей России<br />для всех клиентов</div>
           <div class="col-xl-3">Бесплатная круглосуточная<br />техническая поддержка</div>
+        </div>
+      </div>
+    </section>
+    <section id="questions">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 id="questions-title">У Вас остались вопросы?</h2>
+            <h3 id="questions-subtitle">На Ваши вопросы отвечает Эдуард</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-4">
+            <ol class="list-group" type="1">
+                <li class="list-group-item" id="list-group-item-1">Как заказать деталь правильно?</li>
+                <div class="list-group-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <li class="list-group-item">Что делать, если запчасть не понадобилась?</li>
+                <div class="list-group-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <li class="list-group-item">Можете ли Вы установить деталь?</li>
+                <div class="list-group-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <li class="list-group-item">В чем преимущества оригинальных деталей?</li>
+                <div class="list-group-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div class="list-group-description">
+                <li class="list-group-item">В чем преимущества оригинальных деталей?</li>
+                <div class="list-group-description">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <li class="list-group-item" id="list-group-item-6">Ещё вопросы</li>
+              </ol>
+          </div>
+          <div class="col-xl-6 offset-xl-2">
+            <img src="img/eddie_photo.png" alt="eddie">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="conveniences">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 class="conveniences-title">С нами удобно работать!</h2>
+            <h3 class="conveniences-subtitle">
+              Более 70% клиентов приходят к нам по рекомендации!
+            </h3>
+          </div>
+        </div>
+        <div class="row conveniences-img">
+          <div class="col-xl-4">
+            <img src="img/layer_9.png">
+          </div>
+          <div class="col-xl-4">
+            <img src="img/layer_10.png">
+          </div>
+          <div class="col-xl-4">
+            <img src="img/layer_11.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-4 conveniences-description">Вы вносите предоплату<br />в размере 50%<br />от стоимости запчасти</div>
+          <div class="col-xl-4 conveniences-description">Отправляем запчасти<br />в день заказа</div>
+          <div class="col-xl-4 conveniences-description">Получаете деталь<br />проверяете, оплачиваете<br />оставшиеся 50%</div>
+        </div>
+      </div>
+    </section>
+    <section id="warehouse">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 class="conveniences-title"> <!-- здесь использую класс заголовка такой же, как в предыдущем блоке-->
+              У нас собственный склад!
+            </h2>
+            <h3 class="conveniences-subtitle">
+              Что позволяет нам быстро обрабатывать запросы и отгружать детали<br />в день заказа!
+            </h3>
+          </div>
+        </div>
+        <div class="row warehouse-img">
+          <div class="col-xl-4 offset-xl-0,5">
+            <img src="img/layer_19.png">
+          </div>
+          <div class="col-xl-4">
+            <img src="img/layer_18.png">
+          </div>
+          <div class="col-xl-4">
+            <img src="img/layer_19.png">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="specialists">
+      <div class="container specialists-container"> <!--здесь пробую сделать отступы на родительском элементе-->
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 id="specialists-title">У нас в штате есть мобильные бригады,<br />готовые выехать на сервисное обслуживание,<br />ремонт и проведение диагностики</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-4 specialists-img">
+            <img src="img/delivery.png">
+          </div>
+          <div class="col-xl-4 specialists-img"">
+            <img src="img/toolbox.png">
+          </div>
+          <div class="col-xl-4 specialists-img"">
+            <img src="img/certificate.png">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-4">Организуем выезд специалистов<br />в течение двух дней</div>
+          <div class="col-xl-4">Бригады укомплектованы<br />всем необходимым оборудованием<br />для производства работ<br />любой сложности</div>
+          <div class="col-xl-4">Все специалисты проходят обучение<br />и ежегодную аттестацию</div>
         </div>
       </div>
     </section>
