поправил классы для одинаковых кнопок + скрипт

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="col-xl-2 offset-xl-1">
           <ul>
             <li>
-              <a href="tel:+78182474725" class="header-telephone">+7 (818) 247-47-25</a>
+              <a href="tel:+78182474725" class="header-telephone phone">+7 (818) 247-47-25</a>
             </li>
             <li>
-              <a href="tel:+78182474725" class="header-telephone">+7 (818) 247-47-25</a>
+              <a href="tel:+78182474725" class="header-telephone phone">+7 (818) 247-47-25</a>
             </li>
           </ul>
         </div>
@@ -144,7 +144,7 @@
   </section>
   <!--здесь хедер кончился-->
   <section id="vendor">
-    <div class="container">
+    <div class="container vendor-container">
       <div class="row">
         <div class="col-xl-12">
           <h2 id="vendor_title">
@@ -168,7 +168,7 @@
         </div>
         <div class="col-xl-4">
           <form>
-            <button id="vendor_send_button">УЗНАТЬ ЦЕНУ</button>
+            <button id="vendor_send_button" class="yellow_button">УЗНАТЬ ЦЕНУ</button>
           </form>
         </div>
       </div>
@@ -181,7 +181,7 @@
       </div>
       <div class="row">
         <div class="col-xl-12">
-          <h2 id="vendor_number">+7 (818)247-47-25</h2>
+          <a href="tel:+7(818)247-47-25" id="vendor_number" class="phone">+7 (818)247-47-25</a>
         </div>
       </div>
     </div>
@@ -268,41 +268,46 @@
       <div class="row">
         <div class="col-xl-4">
           <ol class="list-group" type="1">
-            <li class="list-group-item" id="list-group-item-1">Как заказать деталь правильно?</li>
+            <li class="list-group-item" id="list-group-item-1">Как заказать деталь правильно?
             <div class="list-group-description">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</p>
               <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.</p>
             </div>
-            <li class="list-group-item">Что делать, если запчасть не понадобилась?</li>
-            <div class="list-group-description">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-            </div>
-            <li class="list-group-item">Можете ли Вы установить деталь?</li>
-            <div class="list-group-description">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-            </div>
-            <li class="list-group-item">В чем преимущества оригинальных деталей?</li>
-            <div class="list-group-description">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-            </div class="list-group-description">
-            <li class="list-group-item">В чем преимущества оригинальных деталей?</li>
-            <div class="list-group-description">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-            </div>
+          </li>
+            <li class="list-group-item">Что делать, если запчасть не понадобилась?
+              <div class="list-group-description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.</p>
+              </div>
+            </li>
+            <li class="list-group-item">Можете ли Вы установить деталь?
+              <div class="list-group-description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.</p>
+              </div>
+            </li>
+            <li class="list-group-item">В чем преимущества оригинальных деталей?
+              <div class="list-group-description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.</p>
+              </div>
+            </li>
+            <li class="list-group-item">В чем преимущества оригинальных деталей?
+              <div class="list-group-description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.</p>
+              </div>
+            </li>
             <li class="list-group-item" id="list-group-item-6">Ещё вопросы</li>
           </ol>
         </div>
@@ -417,7 +422,7 @@
         </div>
         <div class="col-xl-4">
           <form>
-            <button id="consult-send-button">
+            <button id="consult-send-button" class="yellow_button">
               ПЕРЕЗВОНИТЬ СЕЙЧАС
             </button>
           </form>
@@ -455,16 +460,16 @@
           <h4 id="footer-questions">
             Есть вопросы? Звоните!
           </h4>
-          <a href="tel:+7(818)247-47-25" id="footer-phone">
+          <a href="tel:+7(818)247-47-25" id="footer-phone" class="phone">
             +7(818) 247-47-25
           </a>
         </div>
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+  crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
