доделал кнопки + скрипт

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Белаз</title>
 </head>
 
@@ -410,7 +410,7 @@
         <div class="col-xl-12">
           <h2 class="consult-title">Если Вам необходима бесплатная консультация по вопросу обслуживания</h2>
           <h5 id="consult-subtitle">Звоните нам по телефону:</h5>
-          <h2 class="consult-title"><a href="tel:+7(818)247-47-25">+7 (818) 247-47-25</a></h2>
+          <a href="tel:+7(818)247-47-25" class="consult-title phone">+7 (818) 247-47-25</a>
           <!--Здесь стоит неправильный отступ, должно быть на 3 пикселя больше-->
         </div>
       </div>
