--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/media.css">
   <title>Белаз</title>
 </head>
 
@@ -16,10 +17,10 @@
   <header class="menu-bar">
     <div class="container header-container">
       <div class="row">
-        <div class="col-xl-2">
+        <div class="col-xl-2 col-md-3 col-sm-8">
           <img src="img/logo.png" alt="Belaz" class="logo">
         </div>
-        <div class="col-xl-2 offset-xl-3 justify-content-center">
+        <div class="col-xl-2 col-md-3 col-sm-8 offset-xl-3">
           <ul>
             <li class="header-element">
               с 9.00 до 21.00
@@ -29,7 +30,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-xl-2 offset-xl-1">
+        <div class="col-xl-2 col-md-3 col-sm-8 offset-xl-1">
           <ul>
             <li>
               <a href="tel:+78182474725" class="header-telephone phone">+7 (818) 247-47-25</a>
@@ -39,7 +40,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-xl-2 header-order-call">
+        <div class="col-xl-2 col-md-3 header-order-call">
           <span><a href="#" id="order-call-button">ЗАКАЗАТЬ ЗВОНОК</a></span>
         </div>
       </div>
